--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
             <li><a href="">SS Junior</a></li>
             <li><a href="">Events</a></li>
             <li><a href="">Contact Us</a></li>
+            <h1>Sumaiya<h1>
            </ul>
         </div>
     </div>
