--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <li><a href="">SS Junior</a></li>
             <li><a href="">Events</a></li>
             <li><a href="">Contact Us</a></li>
-            <h1>Sumaiya<h1>
+            <li><a href="">view info</a></li>
            </ul>
         </div>
     </div>
