--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
             <li><a href="">Events</a></li>
             <li><a href="">Contact Us</a></li>
             <li><a href="">view info</a></li>
+               <li><a href="">Contact Us</a></li>
+            <li><a href="">view info</a></li>
            </ul>
         </div>
     </div>
